--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,7 +67,7 @@ import MinimalAnalytics from "../components/MinimalAnalytics.astro";
       setColor(
         localStorage.getItem("color") != undefined
           ? localStorage.getItem("color")
-          : getRandomColor()
+          : getRandomColor(),
       );
     </script>
     <script
