--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -11,7 +11,7 @@ export async function getStaticPaths({ paginate }) {
     return data.draft !== true || isDev;
   });
   const sortedPosts = posts.sort(
-    (post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate()
+    (post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate(),
   );
   return paginate(sortedPosts, {
     pageSize: 5,
@@ -33,7 +33,7 @@ let tagCounts = allTags.reduce((acc, tag) => {
 }, {});
 let sortedTags = allTags.sort((a, b) => tagCounts[b] - tagCounts[a]);
 let uniqueTags = sortedTags.filter(
-  (tag, index) => sortedTags.indexOf(tag) === index
+  (tag, index) => sortedTags.indexOf(tag) === index,
 );
 ---
 
