--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -13,19 +13,7 @@ export async function getStaticPaths({ paginate }) {
   const sortedPosts = posts.sort((first, second) =>
     first.data.date < second.data.date ? 1 : -1,
   );
-
-  const encodedPosts = sortedPosts.map((post) => {
-    const encodedTags = post.data.tags.map((tag) => encodeURIComponent(tag));
-    return {
-      ...post,
-      data: {
-        ...post.data,
-        tags: encodedTags,
-      },
-    };
-  });
-
-  return paginate(encodedPosts, {
+  return paginate(sortedPosts, {
     pageSize: 5,
   });
 }
