feat: remove include-media package and make my own mixins

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -68,7 +68,7 @@ const {
       color: $template-color;
     }
 
-    @include media(">=tablet") {
+    @include desktop {
       margin: 25px;
       display: inline-flexbox;
       padding: 12px 24px;
