--- a/src/components/FlexCenter.astro
+++ b/src/components/FlexCenter.astro
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: center;
 
-    @include media(">tablet") {
+    @include desktop {
       flex-direction: row;
     }
   }
