--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -121,7 +121,7 @@ const sortedWorks = works.sort((first, second) =>
           right: 0;
           margin: auto;
 
-          @include media(">tablet") {
+          @include desktop {
             width: 100%;
             height: auto;
           }
@@ -150,7 +150,7 @@ const sortedWorks = works.sort((first, second) =>
           background-color: rgba(0, 0, 0, 0.6);
           padding: 10px 35px;
 
-          @include media(">tablet") {
+          @include desktop {
             font-size: 1.75em;
             width: auto;
             flex-direction: row;
