--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -52,7 +52,7 @@ const sortedWorks = works.sort((first, second) =>
       margin: 30px 15px;
       transition: all 0.2s ease-in-out;
 
-      @include media(">tablet") {
+      @include desktop {
         flex: 0 0 calc(50% - 30px);
       }
 
