--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -35,14 +35,14 @@ const { icon = null, second = false } = Astro.props;
     border-radius: 10px;
     align-items: center;
 
-    @include media(">tablet") {
+    @include desktop {
       margin: 0 0 25px 0;
       gap: 25px;
       flex-direction: row;
       justify-content: space-between;
     }
 
-    @include media("<tablet") {
+    @include phone {
       .hide-mobile {
         display: none;
       }
