--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -126,7 +126,7 @@ import { Icon } from "astro-icon/components";
           fill: $template-color-accent;
         }
 
-        @include media(">tablet") {
+        @include desktop {
           padding: 20px;
         }
 
@@ -153,7 +153,7 @@ import { Icon } from "astro-icon/components";
         fill: $template-color-accent;
       }
 
-      @include media(">tablet") {
+      @include desktop {
         flex-direction: row;
         justify-content: center;
         gap: 25px;
